--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
  
+.dark-bg{
+  background-color: #0a101dfb;;
+  color: #FFFFFF;
+}
+
+:root {
+  --primary-custom: #FFCC80;
+  --accent-custom: #FF4500;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -75,4 +85,8 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+html{
+  scroll-behavior: smooth;
 }
